kubernetes/registry/base/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: registry
  namespace: registry
  labels:
    app: registry
    app.kubernetes.io/instance: registry
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
      annotations:
        enable.version-checker.io/registry: "true"
    spec:
      automountServiceAccountToken: false
      serviceAccountName: registry
      restartPolicy: Always
      schedulerName: default-scheduler
      dnsPolicy: ClusterFirst
      securityContext:
        runAsNonRoot: true
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
        # renovate: datasource=docker depName=docker.io/library/registry
        - image: docker.io/library/registry:3.1.2@sha256:ddf754342cfc8acc51a56d5d0ab6af06826461864460636d8bd5c546dab2a7b8
          imagePullPolicy: IfNotPresent
          name: registry
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: registry
              mountPath: /var/lib/registry
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 64Mi
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            privileged: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      volumes:
        - name: registry
          persistentVolumeClaim:
            claimName: registry
      enableServiceLinks: false
