kubernetes/registry/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
  labels:
    app.kubernetes.io/instance: registry
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: http
  selector:
    app: registry
